# cpp_codec

./: CMakeLists.txt  README.md  codec.cpp  codec_SUITE.cpp  codec_test.cpp  decoder.cpp  decoder.h  encoder.cpp  encoder.h  encoder_test.cpp  main  main.cpp  node.cpp  tree.cpp
include/: FileReader.h  HuffmanBytes.h  IEncryptionStrategy.h  caesar.h  codec.h  huffman.h  node.h  tree.h  types.h
src/: FileReader.cpp  HuffmanBytes.cpp  caesar.cpp  codec.cpp  huffman.cpp  main.cpp  node.cpp
test/: codec_SUITE.cpp
